--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "cbd23",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
@@ -18,7 +20,9 @@
     "express-session": "^1.18.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.1",
-    "prisma": "^6.3.1"
+    "pg": "^8.13.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.6.0"
   }
 }
