--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "tinify": "^1.8.0"
   },
   "devDependencies": {
     "prisma": "^6.6.0"
